Improve the visibility of field error messages, in Windows high-contrast mode and out (#7663) Fix #7241

--- a/client/scss/components/_forms.scss
+++ b/client/scss/components/_forms.scss
@@ -123,7 +123,20 @@ select::-ms-expand {
 }
 
 .error-message {
-    color: $color-red;
+    font-size: 1em;
+    font-weight: bold;
+    color: $color-text-error;
+
+    @media (forced-colors: $media-forced-colours) {
+        forced-color-adjust: none;
+        color: $color-text-error-forced-color;
+    }
+
+    &::before {
+        font-family: wagtail;
+        vertical-align: -10%;
+        content: map-get($icons, 'cross');
+    }
 }
 
 .help {
